--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -2,24 +2,30 @@ $width-large: 1280px;
 $width-medium: 1024px;
 $width-small: 768px;
 $width-mobile: 425px;
-$item-font-size: calc(var(--font-size-small) - 2px);
+$item-font-size: calc(var(--font-size-small) + 1px);
+
+div {
+  overflow-x: unset !important;
+  overflow-y: unset !important;
+}
 
 a {
   text-decoration: none;
 }
 
 .active {
-  border-bottom: 3px solid var(--color-primary);
+  border-bottom: 3px solid white;
 }
 
 .root {
+  position: sticky;
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 0 2.5%;
 
   background: white;
-  color: var(--color-text);
+  color: var(--color-darkblue);
 }
 
 .blog {
@@ -36,14 +42,17 @@ a {
 
   .first_title {
     color: var(--color-primary);
+    font-weight: 500;
   }
 
   .second_title {
-    color: var(--color-text);
+    color: var(--color-darkblue);
+    font-weight: 500;
   }
 
   .dot {
     color: var(--color-primary);
+    font-weight: 500;
   }
    
   h1 {
@@ -73,9 +82,9 @@ a {
     margin: 0;
     padding: 10px 5px;
 
-    color: var(--color-text-secondary);
+    color: var(--color-darkblue);
     font-size: $item-font-size;
-    font-weight: 600;
+    font-weight: 500;
 
     @media(max-width: $width-large) {
       font-size: calc($item-font-size - 2px);
@@ -92,81 +101,34 @@ a {
   }
 }
 
-.icon {
-  padding-right: 6px !important;
+.dropdown_items {
+  position: relative;
+  margin-top: 0px;
+  padding-top: 10px;
 }
 
-.buttons {
-  display: flex;
-  justify-content: flex-end;
-  width: 20%;
+.menu_title {
+  position: absolute;
+  top: -40px;
+  left: 2.5%;
 
-  button {
-    text-transform: capitalize;
-    font-size: var(--font-size-small);
+  width: 150px;
+  height: 45px;
 
-    @media(max-width: $width-large) {
-      font-size: calc(var(--font-size-small) - 3px);
-    }
-    
-    @media(max-width: $width-medium) {
-      font-size: calc(var(--font-size-small) - 5px);
-    }
+  //background: black;
+  color: var(--color-darkblue);
 
-    @media(max-width: $width-small) {
-      font-size: calc(var(--font-size-small) - 7px);
-    }
-  }
-
-  .create_btn {
-    height: 50px;
-    margin-right: 10px;
-
-    color: var(--color-primary);
-    border-color: var(--color-primary);
-
-    @media(max-width: $width-medium) {
-      height: 35px;
-      margin-right: 6px;
-    }
-  }
-
-  .create_btn:hover {
-    background: var(--color-hover);
-    border-color: var(--color-primary);
-  }
-
-  .logout_btn {
-    min-width: max-content;
-    height: 50px;
-    background: var(--color-primary);
-
-    @media(max-width: $width-medium) {
-      height: 35px;
-      padding: 6px !important;
-    }
-  }
-
-  .logout_btn:hover {
-    background: white;
-    color: var(--color-primary);
-
-    border: 1px solid var(--color-primary);
-  }
-}
-
-.dropdown {
-  margin-top: -50px;
+  font-size: 22px;
 }
 
 .dropdown_item {
   padding: 8px 10px !important;
   padding-right: 50px !important;
 
-  color: var(--color-text-secondary) !important;
+  color: var(--color-darkblue) !important;
   font-size: $item-font-size !important;
   text-transform: uppercase !important;
-  font-weight: 600 !important;
+  font-weight: 500 !important;
 
   @media(max-width: $width-medium) {
     padding-right: 70px !important;
