--- a/src/pages/Home/Teacher.module.scss
+++ b/src/pages/Home/Teacher.module.scss
@@ -4,31 +4,53 @@ $width-small: 768px;
 $width-mobile: 425px;
 
 @mixin media-font($width, $font-size, $size-change: 0px) {
-  @media(max-width: $width) {
+  @media (max-width: $width) {
     font-size: calc($font-size - $size-change);
   }
 }
 
+.primary_text {
+  color: var(--color-primary);
+}
+
+.primary_weight {
+  font-weight: 600;
+}
+
 .root {
+  padding: 5.5% 12.5%;
+  background: white;
+
+  .title {
+    margin-top: 0;
+    margin-bottom: 42px;
+
+    text-align: center;
+    font-size: var(--font-size-title);
+    font-weight: 500;
+
+    @include media-font($width-large, var(--font-size-title), 4px);
+    @include media-font($width-medium, var(--font-size-title), 8px);
+    @include media-font($width-small, var(--font-size-title), 12px);
+  }
+}
+
+.teacher {
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
 
-  padding: 7% 12.5%;
-
-  background: var(--color-tertiary-background);
-
   .photo {
     display: flex;
-    width: 42.5%;
+    width: 45%;
 
     background: white;
     border-radius: 50%;
 
     img {
-      width: 95%;
-      margin: 2.5%;
-      height: 95%;
+      width: 92%;
+      margin: 4%;
+      height: 92%;
       border-radius: 50%;
     }
   }
@@ -38,8 +60,8 @@ $width-mobile: 425px;
 
     .caption {
       margin: 0;
-      margin-bottom: 6.5%;
-      color: white;
+      margin-bottom: 6%;
+      color: black;
 
       h1 {
         margin: 0;
@@ -64,8 +86,8 @@ $width-mobile: 425px;
       position: relative;
       height: 100%;
 
-      background: white;
-      color: var(--color-text);
+      background: var(--color-light-bg);
+      color: var(--color-darkblue);
 
       border-radius: var(--border-radius-primary);
 
@@ -73,12 +95,13 @@ $width-mobile: 425px;
         position: absolute;
         left: -28px;
         top: 15%;
-        border-bottom: 28px solid white;
+        border-bottom: 28px solid #e8f0fe;
         border-left: 28px solid transparent;
       }
 
       p {
         padding: 10px 20px;
+        color: black;
         font-size: var(--font-size-small);
 
         @include media-font($width-medium, var(--font-size-small), 2px);
