--- a/src/pages/Posts/Posts.module.scss
+++ b/src/pages/Posts/Posts.module.scss
@@ -12,21 +12,62 @@ $width-mobile: 425px;
   margin: auto;
   padding: 2% 0;
 
-  .title {
-    margin: 0;
+  .top {
+    display: flex;
+    justify-content: space-between;
+    width: 94%;
+    padding: 1.8% 2%;
 
-    color: var(--color-text);
-    font-size: var(--font-size-large);
-    font-weight: 600;
+    background: white;
+    border-radius: var(--border-radius-primary);
+
+    h1 {
+      margin: 0;
+
+      color: var(--color-darkblue);
+      font-size: var(--font-size-large);
+      font-weight: 500;
+    }
+    h1::first-letter {
+      text-transform: capitalize;
+    }
   }
 
-  .title::first-letter {
-    text-transform:capitalize;
+  .filter {
+    width: max-content;
+    height: max-content;
+    margin-right: 0.6%;
+    text-align: center;
+
+    border-radius: var(--border-radius-primary);
+
+    .btn_filter {
+      $font-size-btn: calc(var(--font-size-small) - 2px);
+      color: var(--color-primary) !important;
+      border-color: var(--color-primary) !important;
+
+      font-size: $font-size-btn !important;
+    }
+
+    .btn_filter:hover {
+      background: var(--color-primary-light) !important;
+    }
+
+    .active {
+      font-weight: 600 !important;
+      background: var(--color-primary) !important;
+      color: white !important;
+    }
+
+    .active:hover {
+      background: var(--color-primary) !important;
+    }
   }
 }
 
 .posts {
   display: flex;
+  flex-direction: row;
   justify-content: flex-start;
   flex-wrap: wrap;
   gap: 2.5%;
@@ -34,54 +75,6 @@ $width-mobile: 425px;
   width: 100%;
   margin: 0;
   padding-top: 2%;
-}
-
-.tags {
-  width: 27.5%;
-  height: max-content;
-  padding: 2%;
-
-  background: white;
-  border-radius: var(--border-radius-primary);
-
-  .title {
-    margin: 0 0 10%;
-    font-size: var(--font-size-large);
-
-    @media(max-width: $width-large) {
-      font-size: calc(var(--font-size-large) - 4px);
-    }
-
-    @media(max-width: $width-small) {
-      font-size: calc(var(--font-size-large) - 8px);
-    }
-  }
-
-  .tag {
-    display: flex;
-    align-items: center;
-    margin-bottom: 5%;
-
-    img {
-      height: 35px;
-
-      @media(max-width: $width-medium) {
-        height: 25px;
-      }
-    }
-
-    p {
-      margin: 0;
-      padding: 0 30px 3px;
-      
-      font-size: var(--font-size-small);
-
-      @media(max-width: $width-medium) {
-        height: 25px;
-        font-size: calc(var(--font-size-small) - 4px);
-      }
-    }
-  }
 }
 
 .no_data {
