--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,19 +1,23 @@
 :root {
   --width-primary: 80%;
 
-  --color-primary: #DC143C;
+  //--color-primary: #E50757;
+  --color-primary: #e5004d;  
+  --color-primary-light: #fef6f9;
+
   --color-blue: #1877f2;
   --color-hover: rgba(220, 20, 60, .03);
-
-  --color-text: #00125b;  
-  --color-text-secondary: #374557;
-  --color-text-tertiary: #828291;
+  --color-darkblue: #00007A;  
+  //--color-darkblue: #2a3876;
+  //#1f2e6f
+  --color-lightblue: #599df5;
+  --color-lightgrey: #bfc4d6;
 
   --color-background: #f5f5f5;
-  --color-second-background: #2B5178;
-  --color-tertiary-background: #00125b;
-  --grey-background: #efeff7;
+  --color-light-bg: #e8f0fe;
+  --color-second-bg: #00007A;
 
+  --grey-background: #efeff7;
   --color-border: #dedede;
 
   --font-size-title: 40px;
