--- a/src/components/Post/Post.module.scss
+++ b/src/components/Post/Post.module.scss
@@ -19,6 +19,8 @@ $width-mobile: 425px;
     color: var(--color-darkblue);
     font-size: $font-size-h1;
     font-weight: 500;
+
+    @include media-font($width-small, $font-size-h1, 2px);
   }
 
   .main_text {
@@ -26,6 +28,8 @@ $width-mobile: 425px;
 
     font-size: var(--font-size-small);
     letter-spacing: 0.1px;
+
+    @include media-font($width-small, var(--font-size-small), 2px);
   }
 }
 
@@ -80,6 +84,12 @@ $width-mobile: 425px;
     font-size: var(--font-size-medium);
     font-weight: 500;
     letter-spacing: 0.2px;
+
+    @include media-font($width-small, var(--font-size-medium), 3px);
+
+    @media (max-width: $width-small) {
+      margin: 0 0 10px;
+    }
   }
 
   .explain {
@@ -90,6 +100,7 @@ $width-mobile: 425px;
 
     color: var(--color-darkblue);
     font-size: var(--font-size-small);
+    @include media-font($width-small, var(--font-size-small), 2px);
   }
 }
 
@@ -124,6 +135,9 @@ $width-mobile: 425px;
         margin-left: 2.5%;
         padding: 0;
         padding-bottom: 12px;
+
+        font-size: var(--font-size-small);
+        @include media-font($width-small, var(--font-size-small), 2px);
       }
     }
   }
@@ -143,7 +157,11 @@ $width-mobile: 425px;
   margin-top: 5%;
 
   h1 {
+    $font-size-h1: calc(var(--font-size-small) + 4px);
+
     margin: 0 0 0 2px;
+    font-size: $font-size-h1;
+    @include media-font($width-small, $font-size-h1, 2px);
   }
 }
 
@@ -158,5 +176,12 @@ $width-mobile: 425px;
 
     border: 0;
     border-radius: var(--border-radius-primary);
+
+    @include media-font($width-small, var(--font-size-small), 2px);
+    
+    @media (max-width: $width-small) {
+      margin-top: 20px;
+      padding: 1.5% 5%;
+    }
   }
 }
