--- a/src/pages/Home/Footer.module.scss
+++ b/src/pages/Home/Footer.module.scss
@@ -1,33 +1,80 @@
+$width-large: 1280px;
+$width-medium: 1024px;
+$width-small: 768px;
+$width-mobile: 425px;
+
+@mixin media-font($width, $font-size, $size-change: 0px) {
+  @media(max-width: $width) {
+    font-size: calc($font-size - $size-change);
+  }
+}
+
 .border_right {
   align-self: center;
   height: 15px;
   margin-top: 5px;
   border-right: 1px solid grey;
+
+  @media (max-width: $width-medium) {
+    display: none;
+  }
 }
 
 .root {
   display: flex;
   align-items: center;
   justify-content: space-between;
+
+  width: 85%;
   margin: 0;
-  padding: 0.25% 10%;
+  padding: 0.25% 7.5%;
+
   background: #02093B;
   color: lightgrey;
+
+  @media (max-width: $width-medium) {
+    width: 90%;
+    padding: 0.25% 5%;
+  }
+
+  @media (max-width: $width-mobile) {
+    justify-content: space-around;
+  }
 }
 
 .name {
-  width: 25%;
+  width: 22.5%;
+
+  font-size: var(--font-size-small);
   text-align: start;
+
+  @include media-font($width-medium, var(--font-size-small), 2px);
+ 
+  @media (max-width: $width-mobile) {
+    width: 50%;
+  }
 }
 
 .contacts {
   display: flex;
   justify-content: center;
-  width: 50%;
-  padding: 0 10%;
+  width: 32.5%;
+  padding: 0 3.75%;
 
   p {
+    $font-size-p: calc(var(--font-size-small) - 2px);
     margin: 0 10px;
+
+    @include media-font($width-medium, $font-size-p, 2px);
+  }
+
+  @media (max-width: $width-medium) {
+    flex-direction: column;
+  }
+
+  @media (max-width: $width-mobile) {
+    width: 50%;
+    padding: 0;
   }
 }
 
@@ -40,5 +87,9 @@
     $font-size-icon: calc(var(--font-size-large) - 3px);
     font-size: $font-size-icon !important;
     margin: 0 1px !important;
+  }
+
+  @media (max-width: $width-mobile) {
+    display: none;
   }
 }
