--- a/src/pages/Vocabulary/Vocabulary.module.scss
+++ b/src/pages/Vocabulary/Vocabulary.module.scss
@@ -1,3 +1,14 @@
+$width-large: 1280px;
+$width-medium: 1024px;
+$width-small: 768px;
+$width-mobile: 425px;
+
+@mixin media-font($width, $font-size, $size-change: 0px) {
+  @media (max-width: $width) {
+    font-size: calc($font-size - $size-change) !important;
+  }
+}
+
 .no_data {
   text-align: center;
 
@@ -32,30 +43,24 @@
 
   h1 {
     margin: 0;
-    //padding: 0 0 3.5%;
     color: var(--color-darkblue);
     font-size: var(--font-size-large);
     font-weight: 500;
+
+    @include media-font($width-medium, var(--font-size-large), 6px);
+    @include media-font($width-mobile, var(--font-size-large), 12px);
   }
   h1::first-letter {
     text-transform: capitalize;
   }
 }
 
-.select {
-  padding: 0 !important;
-  color: var(--color-darkblue) !important;
-  border-color: var(--color-darkblue) !important;
-}
-
 li {
   padding: 2px 16px !important;
 }
 
-
-
 table {
-  width: 80%;
+  width: 100%;
   margin: 0 auto;
   padding-top: 2%;
 
@@ -63,16 +68,33 @@ table {
 
   th,
   td {
+    $font-size-td: calc(var(--font-size-medium) - 5px);
+
     margin: 1%;
-    padding: 1% 0.9%;
-    font-size: calc(var(--font-size-medium) - 5px);
+    padding: 1%;
+    font-size: $font-size-td;
 
     border: 1px solid var(--color-lightgrey);
+
+    @include media-font($width-small, $font-size-td, 3px);
+    @include media-font($width-mobile, $font-size-td, 5px);
+
+    @media (max-width: $width-small) {
+      padding: 1.5% 1%;
+    }
   }
 
   th {
     background: var(--color-primary);
     color: white;
+  }
+
+  .th_n {
+    width: 4%;
+
+    @media (max-width: $width-small) {
+      width: 7.5%;
+    }
   }
 
   td {
