--- a/src/pages/Home/Comments.module.scss
+++ b/src/pages/Home/Comments.module.scss
@@ -15,6 +15,10 @@ $width-mobile: 425px;
   text-align: start;
 
   background: white;
+
+  @media (max-width: $width-small) {
+    padding: 5.5% 5%;
+  }
 }
 
 .inner {
